--- a/fronted/css/css.css
+++ b/fronted/css/css.css
@@ -16,6 +16,9 @@ html{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     
 }
+body{
+    margin-bottom: 10%;
+}
 ul{
     list-style: none;
 }
@@ -207,6 +210,9 @@ header{
 }
 
 /**ESTILOS PANTALLA PEQUEÑA**/
+body{
+    margin-bottom: 0;
+}
 @media (min-width: 1350px){
     body{
         background-color: black;
