--- a/fronted/css/landing.css
+++ b/fronted/css/landing.css
@@ -30,7 +30,7 @@
   #eslogan{
     width: 80vw;
     height:20%;
-    margin-left: 10vw;
+    /*margin-left: 10vw;*/
     margin-bottom: 5%;
     display: flex;
     flex-direction: column;
