--- a/fronted/css/landing.css
+++ b/fronted/css/landing.css
@@ -29,13 +29,14 @@
 
   #eslogan{
     width: 80vw;
+    margin: 0, auto;
     height:20%;
     /*margin-left: 10vw;*/
     margin-bottom: 5%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-
+    align-items: center;
     flex-wrap: wrap;
     /*animation: growAndMove 2s ease-in-out infinite;
     */
@@ -45,7 +46,7 @@ h1{
     
     width: auto;
     color: #D9D9D9;
-    font-size: 3em;
+    font-size: 2.5em;
     font-weight: 400;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     letter-spacing: 0.3em;
