--- a/fronted/css/registrologinv1.css
+++ b/fronted/css/registrologinv1.css
@@ -1,7 +1,16 @@
-/*OTRA VERSION*/
-#formularioRegistro{
+
+/*ESTILOS PARA MOVIL*/
+/* #main-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: end;
+    z-index: -100;
+} */
+#formulario-registro{
     
     height: 80vh;
+    /* width: 80vw; */
     background-color: #2b3035;
     opacity: 0.80;
 
@@ -23,7 +32,7 @@ form{
     align-items: center;
     gap:5vh;
 }
-#conGoogle{
+#con-google{
     width: 80%;
     height: 5vh;
     display: flex;
@@ -35,32 +44,53 @@ form{
     cursor:pointer;
     font-size: 0.8em;
 }
-#conGoogle i, #conGoogle span{
+#con-google i, #con-google span{
     margin-right: 1em;
     color: #2b3035;
     font-weight: 600;
     font-size: 1.1em;
 }
-.itemForm{
+.item-form{
     width: 70%;
     height: 20%;
     padding: 0.5em;
     border: solid 1px #d9d9d9;
 }
-.itemForm:focus{
+.item-form:focus{
     outline: none;
 }
-.itemRegistro{
+.item-registro{
     background-color: #2b3035;
 }
-#enlaceLogin, #registrarUsuario, #iniciarSesion{
+#enlace-login, #registrar, #iniciar-sesion{
     text-align: center;
     text-decoration: underline;
     cursor: pointer;
     padding: 0.8em;
     text-underline-offset: 0.2em;
 }
-#iniciarSesion, #registrarUsuario{
+#iniciar-sesion{
     text-decoration: none;
     border: solid 1px #d9d9d9;
 }
+/*ESTILOS PARA TABLET*/
+/* @media (min-width: 768px){
+    #formulario-registro{
+        
+        width: 70vw;
+    }
+} */
+/*ESTILOS PARA PANTALLA PEQ*/
+/* @media (min-width: 1350px){
+    #formulario-registro{
+        
+        width: 50vw;
+    }
+} */
+/*ESTILOS PARA PANTALLA GRANDE*/
+/* @media (min-width: 1900px){
+    #formulario-registro{
+        
+        width: 30vw;
+    }
+} */
